# vibe-coding-backtester

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  VALIDATION.md  create_notebook.py  mkdocs.yml  pre-commit-hook.sh  pyproject.toml  pytest.ini  requirements.txt  setup_validation.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: docker.yml  publish.yml
backtester/: __init__.py  cli.py
backtester/analysis/: __init__.py  metrics.py  visualization.py
backtester/cli/: __init__.py  analysis_commands.py  backtest_commands.py  main.py  validation_commands.py
backtester/core/: __init__.py  config.py  engine.py  results.py
backtester/data/: __init__.py  base.py  csv_source.py  excel_source.py  exchange_source.py  synthetic.py
backup/: test_all_validation.py  test_cross_validation.py  test_metrics.py  test_monte_carlo.py  test_validation.py  test_walk_forward.py
data/: README.md
docs/: BACKTESTER_VALIDATION_CHECKLIST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  api_reference.md  architecture.md  configuration.md  index.md  installation.md  make.bat  module_specs.md  prd.txt  quickstart.md
examples/: README.md  basic_backtest.py  btc_backtest.py  combined_strategy_backtest.py  config.yaml  strategy_ensemble.py
notebooks/: README.md  basic_backtest.ipynb  basic_backtest.py  btc_analysis.py  parameter_optimization.py  strategy_ensemble.py  visualization.py
output/: README.md
tests/: README.md
tools/: README.md
(+121 files in other folders)
